[package]
name = "prj_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
rppal = "0.13.0"
tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.11", features = ["blocking","json"]} 
openssl-sys = { version = "0.9.87", features = ["vendored"]}


serde = { version = "1", features = ["derive"] }
serde_json = "1"
